exports[`prefer-object-from-entries > invalid(1): _.fromPairs(pairs) 1`] = `

  1 | _.fromPairs(pairs)

`;

exports[`prefer-object-from-entries > invalid(1): _.fromPairs(pairs) 2`] = `

Message:
> 1 | _.fromPairs(pairs)
    | ^^^^^^^^^^^ Prefer \`Object.fromEntries()\` over \`_.fromPairs()\`.

Output:
  1 | Object.fromEntries(pairs)

`;

exports[`prefer-object-from-entries > invalid(1): pairs.reduce(object => ({...object, key}), {}); 1`] = `

  1 | pairs.reduce(object => ({...object, key}), {});

`;

exports[`prefer-object-from-entries > invalid(1): pairs.reduce(object => ({...object, key}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => ({...object, key}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => ['key', key]));

`;

exports[`prefer-object-from-entries > invalid(10): ((\n\t(( pairs ))\n\t.reduce(\n\t\t((\n\t\t\t(object,) => ((\n\t\t\t\t((\n\t\t\t\t\tObject\n\t\t\t\t)).assign(\n\t\t\t\t\t((\n\t\t\t\t\t\tobject\n\t\t\t\t\t)),\n\t\t\t\t\t(({\n\t\t\t\t\t\t[ ((key)) ] : ((value)),\n\t\t\t\t\t}))\n\t\t\t\t)\n\t\t\t))\n\t\t)),\n\t\t({})\n\t)\n)); 1`] = `

   1 | ((
   2 | 	(( pairs ))
   3 | 	.reduce(
   4 | 		((
   5 | 			(object,) => ((
   6 | 				((
   7 | 					Object
   8 | 				)).assign(
   9 | 					((
  10 | 						object
  11 | 					)),
  12 | 					(({
  13 | 						[ ((key)) ] : ((value)),
  14 | 					}))
  15 | 				)
  16 | 			))
  17 | 		)),
  18 | 		({})
  19 | 	)
  20 | ));

`;

exports[`prefer-object-from-entries > invalid(10): ((\n\t(( pairs ))\n\t.reduce(\n\t\t((\n\t\t\t(object,) => ((\n\t\t\t\t((\n\t\t\t\t\tObject\n\t\t\t\t)).assign(\n\t\t\t\t\t((\n\t\t\t\t\t\tobject\n\t\t\t\t\t)),\n\t\t\t\t\t(({\n\t\t\t\t\t\t[ ((key)) ] : ((value)),\n\t\t\t\t\t}))\n\t\t\t\t)\n\t\t\t))\n\t\t)),\n\t\t({})\n\t)\n)); 2`] = `

Message:
   1 | ((
   2 | 	(( pairs ))
>  3 | 	.reduce(
     | 	 ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.
   4 | 		((
   5 | 			(object,) => ((
   6 | 				((
   7 | 					Object
   8 | 				)).assign(
   9 | 					((
  10 | 						object
  11 | 					)),
  12 | 					(({
  13 | 						[ ((key)) ] : ((value)),
  14 | 					}))
  15 | 				)
  16 | 			))
  17 | 		)),
  18 | 		({})
  19 | 	)
  20 | ));

Output:
   1 | ((
   2 | 	Object.fromEntries((( pairs ))
   3 | 	.map(
   4 | 		((
   5 | 			() => 
   6 | 				[((key)), ((value))]
   7 | 			
   8 | 		))
   9 | 	))
  10 | ));

`;

exports[`prefer-object-from-entries > invalid(11): pairs.reduce(object => ({...object, 0: value}), {}); 1`] = `

  1 | pairs.reduce(object => ({...object, 0: value}), {});

`;

exports[`prefer-object-from-entries > invalid(11): pairs.reduce(object => ({...object, 0: value}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => ({...object, 0: value}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => [0, value]));

`;

exports[`prefer-object-from-entries > invalid(12): pairs.reduce(object => ({...object, true: value}), {}); 1`] = `

  1 | pairs.reduce(object => ({...object, true: value}), {});

`;

exports[`prefer-object-from-entries > invalid(12): pairs.reduce(object => ({...object, true: value}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => ({...object, true: value}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => ['true', value]));

`;

exports[`prefer-object-from-entries > invalid(13): pairs.reduce(object => ({...object, 0n: value}), {}); 1`] = `

  1 | pairs.reduce(object => ({...object, 0n: value}), {});

`;

exports[`prefer-object-from-entries > invalid(13): pairs.reduce(object => ({...object, 0n: value}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => ({...object, 0n: value}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => [0n, value]));

`;

exports[`prefer-object-from-entries > invalid(14): pairs.reduce(object => ({...object, undefined: value}), {}); 1`] = `

  1 | pairs.reduce(object => ({...object, undefined: value}), {});

`;

exports[`prefer-object-from-entries > invalid(14): pairs.reduce(object => ({...object, undefined: value}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => ({...object, undefined: value}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => ['undefined', value]));

`;

exports[`prefer-object-from-entries > invalid(15): pairs.reduce(object => ({...object, null: value}), {}); 1`] = `

  1 | pairs.reduce(object => ({...object, null: value}), {});

`;

exports[`prefer-object-from-entries > invalid(15): pairs.reduce(object => ({...object, null: value}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => ({...object, null: value}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => ['null', value]));

`;

exports[`prefer-object-from-entries > invalid(16): pairs.reduce(object => ({...object, var: value}), {}); 1`] = `

  1 | pairs.reduce(object => ({...object, var: value}), {});

`;

exports[`prefer-object-from-entries > invalid(16): pairs.reduce(object => ({...object, var: value}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => ({...object, var: value}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => ['var', value]));

`;

exports[`prefer-object-from-entries > invalid(17): pairs.reduce(object => ({...object, for: value}), {}); 1`] = `

  1 | pairs.reduce(object => ({...object, for: value}), {});

`;

exports[`prefer-object-from-entries > invalid(17): pairs.reduce(object => ({...object, for: value}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => ({...object, for: value}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => ['for', value]));

`;

exports[`prefer-object-from-entries > invalid(18): pairs.reduce(object => ({...object, default: value}), {}); 1`] = `

  1 | pairs.reduce(object => ({...object, default: value}), {});

`;

exports[`prefer-object-from-entries > invalid(18): pairs.reduce(object => ({...object, default: value}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => ({...object, default: value}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => ['default', value]));

`;

exports[`prefer-object-from-entries > invalid(19): pairs.reduce(object => ({...object, string: value}), {}); 1`] = `

  1 | pairs.reduce(object => ({...object, string: value}), {});

`;

exports[`prefer-object-from-entries > invalid(19): pairs.reduce(object => ({...object, string: value}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => ({...object, string: value}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => ['string', value]));

`;

exports[`prefer-object-from-entries > invalid(2): lodash.fromPairs(pairs) 1`] = `

  1 | lodash.fromPairs(pairs)

`;

exports[`prefer-object-from-entries > invalid(2): lodash.fromPairs(pairs) 2`] = `

Message:
> 1 | lodash.fromPairs(pairs)
    | ^^^^^^^^^^^^^^^^ Prefer \`Object.fromEntries()\` over \`lodash.fromPairs()\`.

Output:
  1 | Object.fromEntries(pairs)

`;

exports[`prefer-object-from-entries > invalid(2): pairs.reduce(object => ({...object, /* keep this */ key}), {}); 1`] = `

  1 | pairs.reduce(object => ({...object, /* keep this */ key}), {});

`;

exports[`prefer-object-from-entries > invalid(2): pairs.reduce(object => ({...object, /* keep this */ key}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => ({...object, /* keep this */ key}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

`;

exports[`prefer-object-from-entries > invalid(20): pairs.reduce(object => ({...object, \"string\": value}), {}); 1`] = `

  1 | pairs.reduce(object => ({...object, "string": value}), {});

`;

exports[`prefer-object-from-entries > invalid(20): pairs.reduce(object => ({...object, \"string\": value}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => ({...object, "string": value}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => ["string", value]));

`;

exports[`prefer-object-from-entries > invalid(21): pairs.reduce(object => ({...object, [0]: value}), {}); 1`] = `

  1 | pairs.reduce(object => ({...object, [0]: value}), {});

`;

exports[`prefer-object-from-entries > invalid(21): pairs.reduce(object => ({...object, [0]: value}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => ({...object, [0]: value}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => [0, value]));

`;

exports[`prefer-object-from-entries > invalid(22): pairs.reduce(object => ({...object, [true]: value}), {}); 1`] = `

  1 | pairs.reduce(object => ({...object, [true]: value}), {});

`;

exports[`prefer-object-from-entries > invalid(22): pairs.reduce(object => ({...object, [true]: value}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => ({...object, [true]: value}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => [true, value]));

`;

exports[`prefer-object-from-entries > invalid(23): pairs.reduce(object => ({...object, [0n]: value}), {}); 1`] = `

  1 | pairs.reduce(object => ({...object, [0n]: value}), {});

`;

exports[`prefer-object-from-entries > invalid(23): pairs.reduce(object => ({...object, [0n]: value}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => ({...object, [0n]: value}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => [0n, value]));

`;

exports[`prefer-object-from-entries > invalid(24): pairs.reduce(object => ({...object, [undefined]: value}), {}); 1`] = `

  1 | pairs.reduce(object => ({...object, [undefined]: value}), {});

`;

exports[`prefer-object-from-entries > invalid(24): pairs.reduce(object => ({...object, [undefined]: value}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => ({...object, [undefined]: value}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => [undefined, value]));

`;

exports[`prefer-object-from-entries > invalid(25): pairs.reduce(object => ({...object, [null]: value}), {}); 1`] = `

  1 | pairs.reduce(object => ({...object, [null]: value}), {});

`;

exports[`prefer-object-from-entries > invalid(25): pairs.reduce(object => ({...object, [null]: value}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => ({...object, [null]: value}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => [null, value]));

`;

exports[`prefer-object-from-entries > invalid(26): pairs.reduce(object => ({...object, [\"for\"]: value}), {}); 1`] = `

  1 | pairs.reduce(object => ({...object, ["for"]: value}), {});

`;

exports[`prefer-object-from-entries > invalid(26): pairs.reduce(object => ({...object, [\"for\"]: value}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => ({...object, ["for"]: value}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => ["for", value]));

`;

exports[`prefer-object-from-entries > invalid(27): pairs.reduce(object => ({...object, [string]: value}), {}); 1`] = `

  1 | pairs.reduce(object => ({...object, [string]: value}), {});

`;

exports[`prefer-object-from-entries > invalid(27): pairs.reduce(object => ({...object, [string]: value}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => ({...object, [string]: value}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => [string, value]));

`;

exports[`prefer-object-from-entries > invalid(28): pairs.reduce(object => ({...object, [\"string\"]: value}), {}); 1`] = `

  1 | pairs.reduce(object => ({...object, ["string"]: value}), {});

`;

exports[`prefer-object-from-entries > invalid(28): pairs.reduce(object => ({...object, [\"string\"]: value}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => ({...object, ["string"]: value}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => ["string", value]));

`;

exports[`prefer-object-from-entries > invalid(29): pairs.reduce(object => Object.assign(object, {key}), {}); 1`] = `

  1 | pairs.reduce(object => Object.assign(object, {key}), {});

`;

exports[`prefer-object-from-entries > invalid(29): pairs.reduce(object => Object.assign(object, {key}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => Object.assign(object, {key}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => ['key', key]));

`;

exports[`prefer-object-from-entries > invalid(3): myFromPairsFunction(pairs) 1`] = `

Options:
- functions:
    - 'myFromPairsFunction'

Code:
  1 | myFromPairsFunction(pairs)

`;

exports[`prefer-object-from-entries > invalid(3): myFromPairsFunction(pairs) 2`] = `

Message:
> 1 | myFromPairsFunction(pairs)
    | ^^^^^^^^^^^^^^^^^^^ Prefer \`Object.fromEntries()\` over \`myFromPairsFunction()\`.

Output:
  1 | Object.fromEntries(pairs)

`;

exports[`prefer-object-from-entries > invalid(3): pairs.reduce(object => ({...object, key}), {},); 1`] = `

  1 | pairs.reduce(object => ({...object, key}), {},);

`;

exports[`prefer-object-from-entries > invalid(3): pairs.reduce(object => ({...object, key}), {},); 2`] = `

Message:
> 1 | pairs.reduce(object => ({...object, key}), {},);
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => ['key', key],));

`;

exports[`prefer-object-from-entries > invalid(30): pairs.reduce(object => Object.assign(object, {key,}), {}); 1`] = `

  1 | pairs.reduce(object => Object.assign(object, {key,}), {});

`;

exports[`prefer-object-from-entries > invalid(30): pairs.reduce(object => Object.assign(object, {key,}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => Object.assign(object, {key,}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => ['key', key]));

`;

exports[`prefer-object-from-entries > invalid(31): pairs.reduce(object => Object.assign(object, {[key]: value,}), {}); 1`] = `

  1 | pairs.reduce(object => Object.assign(object, {[key]: value,}), {});

`;

exports[`prefer-object-from-entries > invalid(31): pairs.reduce(object => Object.assign(object, {[key]: value,}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => Object.assign(object, {[key]: value,}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => [key, value]));

`;

exports[`prefer-object-from-entries > invalid(32): pairs.reduce((object, element, index, array) => ({...object, key}), {}); 1`] = `

  1 | pairs.reduce((object, element, index, array) => ({...object, key}), {});

`;

exports[`prefer-object-from-entries > invalid(32): pairs.reduce((object, element, index, array) => ({...object, key}), {}); 2`] = `

Message:
> 1 | pairs.reduce((object, element, index, array) => ({...object, key}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map((element, index, array) => ['key', key]));

`;

exports[`prefer-object-from-entries > invalid(33): pairs.reduce((object, [key, value], index, array,) => ({...object, [key]: value + index + array.length}), {}); 1`] = `

  1 | pairs.reduce((object, [key, value], index, array,) => ({...object, [key]: value + index + array.length}), {});

`;

exports[`prefer-object-from-entries > invalid(33): pairs.reduce((object, [key, value], index, array,) => ({...object, [key]: value + index + array.length}), {}); 2`] = `

Message:
> 1 | pairs.reduce((object, [key, value], index, array,) => ({...object, [key]: value + index + array.length}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(([key, value], index, array,) => [key, value + index + array.length]));

`;

exports[`prefer-object-from-entries > invalid(34): pairs.reduce(object => ({...object, key: function (object) { return object; }}), {}); 1`] = `

  1 | pairs.reduce(object => ({...object, key: function (object) { return object; }}), {});

`;

exports[`prefer-object-from-entries > invalid(34): pairs.reduce(object => ({...object, key: function (object) { return object; }}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => ({...object, key: function (object) { return object; }}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => ['key', function (object) { return object; }]));

`;

exports[`prefer-object-from-entries > invalid(35): pairs.reduce(object => ({...object, method: async () => {}}), {}); 1`] = `

  1 | pairs.reduce(object => ({...object, method: async () => {}}), {});

`;

exports[`prefer-object-from-entries > invalid(35): pairs.reduce(object => ({...object, method: async () => {}}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => ({...object, method: async () => {}}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => ['method', async () => {}]));

`;

exports[`prefer-object-from-entries > invalid(36): pairs.reduce(object => ({...object, method: async function * (){}}), {}); 1`] = `

  1 | pairs.reduce(object => ({...object, method: async function * (){}}), {});

`;

exports[`prefer-object-from-entries > invalid(36): pairs.reduce(object => ({...object, method: async function * (){}}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => ({...object, method: async function * (){}}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => ['method', async function * (){}]));

`;

exports[`prefer-object-from-entries > invalid(37): const object = {};\nfor (const [key, value] of pairs) {\n\tobject[key] = value;\n} 1`] = `

  1 | const object = {};
  2 | for (const [key, value] of pairs) {
  3 | 	object[key] = value;
  4 | }

`;

exports[`prefer-object-from-entries > invalid(37): const object = {};\nfor (const [key, value] of pairs) {\n\tobject[key] = value;\n} 2`] = `

Message:
  1 | const object = {};
> 2 | for (const [key, value] of pairs) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	object[key] = value;
    | ^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Prefer \`Object.fromEntries()\` over a \`for-of\` loop.

Output:
  1 | const object = Object.fromEntries(pairs);

`;

exports[`prefer-object-from-entries > invalid(38): const object = ({});\nfor (const [key, value] of pairs) {\n\tobject[key] = value;\n} 1`] = `

  1 | const object = ({});
  2 | for (const [key, value] of pairs) {
  3 | 	object[key] = value;
  4 | }

`;

exports[`prefer-object-from-entries > invalid(38): const object = ({});\nfor (const [key, value] of pairs) {\n\tobject[key] = value;\n} 2`] = `

Message:
  1 | const object = ({});
> 2 | for (const [key, value] of pairs) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	object[key] = value;
    | ^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Prefer \`Object.fromEntries()\` over a \`for-of\` loop.

Output:
  1 | const object = (Object.fromEntries(pairs));

`;

exports[`prefer-object-from-entries > invalid(39): const object = {\n\t// Comment\n};\nfor (const [key, value] of pairs) {\n\tobject[key] = value;\n} 1`] = `

  1 | const object = {
  2 | 	// Comment
  3 | };
  4 | for (const [key, value] of pairs) {
  5 | 	object[key] = value;
  6 | }

`;

exports[`prefer-object-from-entries > invalid(39): const object = {\n\t// Comment\n};\nfor (const [key, value] of pairs) {\n\tobject[key] = value;\n} 2`] = `

Message:
  1 | const object = {
  2 | 	// Comment
  3 | };
> 4 | for (const [key, value] of pairs) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | 	object[key] = value;
    | ^^^^^^^^^^^^^^^^^^^^^
> 6 | }
    | ^ Prefer \`Object.fromEntries()\` over a \`for-of\` loop.

`;

exports[`prefer-object-from-entries > invalid(4): pairs.reduce(object => ({...object, key,}), {}); 1`] = `

  1 | pairs.reduce(object => ({...object, key,}), {});

`;

exports[`prefer-object-from-entries > invalid(4): pairs.reduce(object => ({...object, key,}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => ({...object, key,}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => ['key', key]));

`;

exports[`prefer-object-from-entries > invalid(4): utils.object.foo(pairs) 1`] = `

Options:
- functions:
    - 'utils.object.foo'

Code:
  1 | utils.object.foo(pairs)

`;

exports[`prefer-object-from-entries > invalid(4): utils.object.foo(pairs) 2`] = `

Message:
> 1 | utils.object.foo(pairs)
    | ^^^^^^^^^^^^^^^^ Prefer \`Object.fromEntries()\` over \`utils.object.foo()\`.

Output:
  1 | Object.fromEntries(pairs)

`;

exports[`prefer-object-from-entries > invalid(40): const object = {};\n// Comment\nfor (const [key, value] of pairs) {\n\tobject[key] = value;\n} 1`] = `

  1 | const object = {};
  2 | // Comment
  3 | for (const [key, value] of pairs) {
  4 | 	object[key] = value;
  5 | }

`;

exports[`prefer-object-from-entries > invalid(40): const object = {};\n// Comment\nfor (const [key, value] of pairs) {\n\tobject[key] = value;\n} 2`] = `

Message:
  1 | const object = {};
  2 | // Comment
> 3 | for (const [key, value] of pairs) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | 	object[key] = value;
    | ^^^^^^^^^^^^^^^^^^^^^
> 5 | }
    | ^ Prefer \`Object.fromEntries()\` over a \`for-of\` loop.

`;

exports[`prefer-object-from-entries > invalid(41): const object = {};\nfor (const [key, value] of pairs) {\n\t// Comment\n\tobject[key] = value;\n} 1`] = `

  1 | const object = {};
  2 | for (const [key, value] of pairs) {
  3 | 	// Comment
  4 | 	object[key] = value;
  5 | }

`;

exports[`prefer-object-from-entries > invalid(41): const object = {};\nfor (const [key, value] of pairs) {\n\t// Comment\n\tobject[key] = value;\n} 2`] = `

Message:
  1 | const object = {};
> 2 | for (const [key, value] of pairs) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	// Comment
    | ^^^^^^^^^^^
> 4 | 	object[key] = value;
    | ^^^^^^^^^^^^^^^^^^^^^
> 5 | }
    | ^ Prefer \`Object.fromEntries()\` over a \`for-of\` loop.

`;

exports[`prefer-object-from-entries > invalid(42): const object = {};\nfor (const [key, value] of pairs) {\n\tobject[key] = value;\n} // Comment 1`] = `

  1 | const object = {};
  2 | for (const [key, value] of pairs) {
  3 | 	object[key] = value;
  4 | } // Comment

`;

exports[`prefer-object-from-entries > invalid(42): const object = {};\nfor (const [key, value] of pairs) {\n\tobject[key] = value;\n} // Comment 2`] = `

Message:
  1 | const object = {};
> 2 | for (const [key, value] of pairs) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	object[key] = value;
    | ^^^^^^^^^^^^^^^^^^^^^
> 4 | } // Comment
    | ^ Prefer \`Object.fromEntries()\` over a \`for-of\` loop.

`;

exports[`prefer-object-from-entries > invalid(43): const object = {};\nfor (const [key, value] of ((pairs))) {\n\tobject[key] = value;\n} 1`] = `

  1 | const object = {};
  2 | for (const [key, value] of ((pairs))) {
  3 | 	object[key] = value;
  4 | }

`;

exports[`prefer-object-from-entries > invalid(43): const object = {};\nfor (const [key, value] of ((pairs))) {\n\tobject[key] = value;\n} 2`] = `

Message:
  1 | const object = {};
> 2 | for (const [key, value] of ((pairs))) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	object[key] = value;
    | ^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Prefer \`Object.fromEntries()\` over a \`for-of\` loop.

Output:
  1 | const object = Object.fromEntries(((pairs)));

`;

exports[`prefer-object-from-entries > invalid(44): const object = {};\nfor (const [key, value] of pairs) {\n\tobject[(key)] = (value);\n} 1`] = `

  1 | const object = {};
  2 | for (const [key, value] of pairs) {
  3 | 	object[(key)] = (value);
  4 | }

`;

exports[`prefer-object-from-entries > invalid(44): const object = {};\nfor (const [key, value] of pairs) {\n\tobject[(key)] = (value);\n} 2`] = `

Message:
  1 | const object = {};
> 2 | for (const [key, value] of pairs) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	object[(key)] = (value);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Prefer \`Object.fromEntries()\` over a \`for-of\` loop.

Output:
  1 | const object = Object.fromEntries(pairs);

`;

exports[`prefer-object-from-entries > invalid(45): const object = {};\nfor (let [key, value] of pairs) {\n\tobject[key] = value;\n}\nconsole.log(object); 1`] = `

  1 | const object = {};
  2 | for (let [key, value] of pairs) {
  3 | 	object[key] = value;
  4 | }
  5 | console.log(object);

`;

exports[`prefer-object-from-entries > invalid(45): const object = {};\nfor (let [key, value] of pairs) {\n\tobject[key] = value;\n}\nconsole.log(object); 2`] = `

Message:
  1 | const object = {};
> 2 | for (let [key, value] of pairs) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	object[key] = value;
    | ^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Prefer \`Object.fromEntries()\` over a \`for-of\` loop.
  5 | console.log(object);

Output:
  1 | const object = Object.fromEntries(pairs);
  2 | console.log(object);

`;

exports[`prefer-object-from-entries > invalid(46): const object = {}\nfor (const [key, value] of pairs) {\n\tobject[key] = value;\n}\n[1].forEach(foo); 1`] = `

  1 | const object = {}
  2 | for (const [key, value] of pairs) {
  3 | 	object[key] = value;
  4 | }
  5 | [1].forEach(foo);

`;

exports[`prefer-object-from-entries > invalid(46): const object = {}\nfor (const [key, value] of pairs) {\n\tobject[key] = value;\n}\n[1].forEach(foo); 2`] = `

Message:
  1 | const object = {}
> 2 | for (const [key, value] of pairs) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	object[key] = value;
    | ^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Prefer \`Object.fromEntries()\` over a \`for-of\` loop.
  5 | [1].forEach(foo);

Output:
  1 | const object = Object.fromEntries(pairs);
  2 | [1].forEach(foo);

`;

exports[`prefer-object-from-entries > invalid(47): const object = {}\nfor (const [key, value] of pairs) {\n\tobject[key] = value;\n}\n(foo)(); 1`] = `

  1 | const object = {}
  2 | for (const [key, value] of pairs) {
  3 | 	object[key] = value;
  4 | }
  5 | (foo)();

`;

exports[`prefer-object-from-entries > invalid(47): const object = {}\nfor (const [key, value] of pairs) {\n\tobject[key] = value;\n}\n(foo)(); 2`] = `

Message:
  1 | const object = {}
> 2 | for (const [key, value] of pairs) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	object[key] = value;
    | ^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Prefer \`Object.fromEntries()\` over a \`for-of\` loop.
  5 | (foo)();

Output:
  1 | const object = Object.fromEntries(pairs);
  2 | (foo)();

`;

exports[`prefer-object-from-entries > invalid(48): const object = {}\nfor (const [key, value] of pairs) {\n\tobject[key] = value;\n}\n\`foo\`; 1`] = `

  1 | const object = {}
  2 | for (const [key, value] of pairs) {
  3 | 	object[key] = value;
  4 | }
  5 | \`foo\`;

`;

exports[`prefer-object-from-entries > invalid(48): const object = {}\nfor (const [key, value] of pairs) {\n\tobject[key] = value;\n}\n\`foo\`; 2`] = `

Message:
  1 | const object = {}
> 2 | for (const [key, value] of pairs) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	object[key] = value;
    | ^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Prefer \`Object.fromEntries()\` over a \`for-of\` loop.
  5 | \`foo\`;

Output:
  1 | const object = Object.fromEntries(pairs);
  2 | \`foo\`;

`;

exports[`prefer-object-from-entries > invalid(49): const object = {}\nfor (const [key, value] of pairs) {\n\tobject[key] = value;\n}\n+foo; 1`] = `

  1 | const object = {}
  2 | for (const [key, value] of pairs) {
  3 | 	object[key] = value;
  4 | }
  5 | +foo;

`;

exports[`prefer-object-from-entries > invalid(49): const object = {}\nfor (const [key, value] of pairs) {\n\tobject[key] = value;\n}\n+foo; 2`] = `

Message:
  1 | const object = {}
> 2 | for (const [key, value] of pairs) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	object[key] = value;
    | ^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Prefer \`Object.fromEntries()\` over a \`for-of\` loop.
  5 | +foo;

Output:
  1 | const object = Object.fromEntries(pairs);
  2 | +foo;

`;

exports[`prefer-object-from-entries > invalid(5): pairs.reduce(object => ({...object, key}), (( {} ))); 1`] = `

  1 | pairs.reduce(object => ({...object, key}), (( {} )));

`;

exports[`prefer-object-from-entries > invalid(5): pairs.reduce(object => ({...object, key}), (( {} ))); 2`] = `

Message:
> 1 | pairs.reduce(object => ({...object, key}), (( {} )));
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => ['key', key]));

`;

exports[`prefer-object-from-entries > invalid(50): const object = {}\nfor (const [key, value] of pairs) {\n\tobject[key] = value;\n}\n/foo/.test(bar); 1`] = `

  1 | const object = {}
  2 | for (const [key, value] of pairs) {
  3 | 	object[key] = value;
  4 | }
  5 | /foo/.test(bar);

`;

exports[`prefer-object-from-entries > invalid(50): const object = {}\nfor (const [key, value] of pairs) {\n\tobject[key] = value;\n}\n/foo/.test(bar); 2`] = `

Message:
  1 | const object = {}
> 2 | for (const [key, value] of pairs) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	object[key] = value;
    | ^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Prefer \`Object.fromEntries()\` over a \`for-of\` loop.
  5 | /foo/.test(bar);

Output:
  1 | const object = Object.fromEntries(pairs);
  2 | /foo/.test(bar);

`;

exports[`prefer-object-from-entries > invalid(51): const object = {}\nfor (const [key, value] of pairs) {\n\tobject[key] = value;\n}\nfoo(); 1`] = `

  1 | const object = {}
  2 | for (const [key, value] of pairs) {
  3 | 	object[key] = value;
  4 | }
  5 | foo();

`;

exports[`prefer-object-from-entries > invalid(51): const object = {}\nfor (const [key, value] of pairs) {\n\tobject[key] = value;\n}\nfoo(); 2`] = `

Message:
  1 | const object = {}
> 2 | for (const [key, value] of pairs) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	object[key] = value;
    | ^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Prefer \`Object.fromEntries()\` over a \`for-of\` loop.
  5 | foo();

Output:
  1 | const object = Object.fromEntries(pairs)
  2 | foo();

`;

exports[`prefer-object-from-entries > invalid(52): const object = {};\nfor (const [key, value] of pairs) {\n\tobject[key] = value;\n}\n[1].forEach(foo); 1`] = `

  1 | const object = {};
  2 | for (const [key, value] of pairs) {
  3 | 	object[key] = value;
  4 | }
  5 | [1].forEach(foo);

`;

exports[`prefer-object-from-entries > invalid(52): const object = {};\nfor (const [key, value] of pairs) {\n\tobject[key] = value;\n}\n[1].forEach(foo); 2`] = `

Message:
  1 | const object = {};
> 2 | for (const [key, value] of pairs) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	object[key] = value;
    | ^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Prefer \`Object.fromEntries()\` over a \`for-of\` loop.
  5 | [1].forEach(foo);

Output:
  1 | const object = Object.fromEntries(pairs);
  2 | [1].forEach(foo);

`;

exports[`prefer-object-from-entries > invalid(6): pairs.reduce( (( object => ({...object, key}) )) , {}); 1`] = `

  1 | pairs.reduce( (( object => ({...object, key}) )) , {});

`;

exports[`prefer-object-from-entries > invalid(6): pairs.reduce( (( object => ({...object, key}) )) , {}); 2`] = `

Message:
> 1 | pairs.reduce( (( object => ({...object, key}) )) , {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map( (( () => ['key', key] )) ));

`;

exports[`prefer-object-from-entries > invalid(7): pairs.reduce( (( (object) => ({...object, key}) )) , {}); 1`] = `

  1 | pairs.reduce( (( (object) => ({...object, key}) )) , {});

`;

exports[`prefer-object-from-entries > invalid(7): pairs.reduce( (( (object) => ({...object, key}) )) , {}); 2`] = `

Message:
> 1 | pairs.reduce( (( (object) => ({...object, key}) )) , {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map( (( () => ['key', key] )) ));

`;

exports[`prefer-object-from-entries > invalid(8): pairs.reduce( (( (object,) => ({...object, key}) )) , {}); 1`] = `

  1 | pairs.reduce( (( (object,) => ({...object, key}) )) , {});

`;

exports[`prefer-object-from-entries > invalid(8): pairs.reduce( (( (object,) => ({...object, key}) )) , {}); 2`] = `

Message:
> 1 | pairs.reduce( (( (object,) => ({...object, key}) )) , {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map( (( () => ['key', key] )) ));

`;

exports[`prefer-object-from-entries > invalid(9): pairs.reduce(object => ({...object, [((key))] : ((value))}), {}); 1`] = `

  1 | pairs.reduce(object => ({...object, [((key))] : ((value))}), {});

`;

exports[`prefer-object-from-entries > invalid(9): pairs.reduce(object => ({...object, [((key))] : ((value))}), {}); 2`] = `

Message:
> 1 | pairs.reduce(object => ({...object, [((key))] : ((value))}), {});
    |       ^^^^^^ Prefer \`Object.fromEntries()\` over \`Array#reduce()\`.

Output:
  1 | Object.fromEntries(pairs.map(() => [((key)), ((value))]));

`;
